--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Get free V-Bucks and start Earning V-Bucks in Fortnite easily. Free the V-Bucks for FREE 2021! ">
-    <meta name="description" content="Get free V-Bucks and start Earning V-Bucks in Fortnite easily. Free the V-Bucks for FREE 2021!">
+    <meta name="description" content="Holen Sie sich V-Bucks und verdienen Sie ganz einfach V-Bucks in Fortnite. Befreie die V-Bucks für 2021!">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Fortnite Get FREE Vbuucks in 1 MIN ! </title>
+    <title>Einige Tipps zum Fortnite-Spiel 2021!</title>
     <link rel="stylesheet" href="stylesheet.css" media="screen">
     <link rel="stylesheet" href="main.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -30,7 +30,7 @@
             <img src="images/question1.png" alt="" class="u-image u-image-default u-image-1" data-image-width="1507" data-image-height="385">
             <div class="u-align-left u-border-3 u-border-custom-color-3 u-expanded-width-sm u-expanded-width-xs u-video u-video-1">
             <div style="position: absolute; width: 100%; height: 100%; left: 0px; top: 0px;" class="embed-responsive">
-                <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/3KgmY5NrEzU?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
+                <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/YHsdYu8RRSI?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
             </div>
             </div>
             <img src="images/fortnite_11.png" alt="" class="u-image u-image-default u-image-2" data-image-width="932" data-image-height="630">
