--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/ico" href="images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Get free V-Bucks and start Earning V-Bucks in Fortnite easily. Free the V-Bucks for FREE 2021! ">
+    <meta name="keywords" content="V-Bucks and start Earning V-Bucks in Fortnite easily. the V-Bucks for  2021! ">
     <meta name="description" content="Holen Sie sich V-Bucks und verdienen Sie ganz einfach V-Bucks in Fortnite. Befreie die V-Bucks für 2021!">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Einige Tipps zum Fortnite-Spiel 2021!</title>
